--- a/css/nav.css
+++ b/css/nav.css
@@ -2,12 +2,13 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #333;
-	box-shadow: 2px 2px 10px black;
+	background-color: #333;	
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
-nav ul {
-	width: 1000px;
+nav ul {	
 	list-style: none;
 	margin: 0;
 	padding: 0;	
@@ -16,22 +17,21 @@ nav ul {
 
 nav li {	
 	flex-grow: 1;
-	height: 4rem;	
+	height: 4rem;
 }
 
 nav li a {
 	text-decoration: none;
 	text-transform: uppercase;
-	color: inherit;
-	
+	color: inherit;	
 	display: flex;
 	flex-grow: 1;
-	height: 100%;
-	
+	height: 100%;	
 	justify-content: center;
 	align-items: center;
 }
 
 nav li a:hover {
-	color: #00FFA6;
+	color: #FFE100;
+	/*color: #00FFA6;*/
 }
