--- a/css/form.css
+++ b/css/form.css
@@ -7,6 +7,9 @@ input[type=submit] {
 	padding: 0.5em 1em;
 	cursor: pointer;	
 }
+input[type=submit]:hover {
+	color: rgba(0,0,0,0.5);
+}
 
 label {
 	display: block;
@@ -23,7 +26,7 @@ input[type=email], textarea {
 }
 
 textarea {
-	height: 10rem;
+	height: 7rem;
 	line-height: 1.5em;
 	resize: none;
 }
