--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,5 @@
 nav {	
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	display: block;		
 	background-color: #333;	
 	position: fixed;
 	top: 0;
@@ -20,18 +18,14 @@ nav li {
 	height: 4rem;
 }
 
-nav li a {
-	text-decoration: none;
-	text-transform: uppercase;
-	color: inherit;	
+nav li a {	
+	text-transform: uppercase;	
 	display: flex;
-	flex-grow: 1;
-	height: 100%;	
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 }
 
 nav li a:hover {
-	color: #FFE100;
-	/*color: #00FFA6;*/
+	color: #FFE100;	
 }
