--- a/css/form.css
+++ b/css/form.css
@@ -15,7 +15,7 @@ label {
 	display: block;
 }
 
-input[type=email], textarea {
+input[type=email], input#nombre, textarea {
 	width: 100%;
 	border: 3px solid #FFE100;
 	font: inherit;
