--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,12 @@ h1 {
 	flex-direction: column;
 }
 
+#metadata-cover {
+	width: 200px;
+	height: 200px;
+	display: inline-block;
+}
+
 @media screen and (max-width: 800px) {
     
     .row {
